<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/length_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="38dp"
            android:text="@string/length"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/interest_text"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/loan_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/loan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/model_text" />

        <TextView
            android:id="@+id/interest_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="38dp"
            android:text="@string/interest"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_text" />

        <TextView
            android:id="@+id/model_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:text="@string/model"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/carb_text" />

        <TextView
            android:id="@+id/date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:text="@string/date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loan_text" />

        <TextView
            android:id="@+id/intro_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/intro1"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.076"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/carb_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/carb"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/intro_text" />

        <TextView
            android:id="@+id/text_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinner_brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/brands_list"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.846"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.472" />

        <Spinner
            android:id="@+id/spinner_model"
            android:layout_width="147dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.92"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_brand"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="255dp"
            android:layout_height="174dp"
            android:layout_marginTop="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_header"
            app:srcCompat="@drawable/vios" />

        <Button
            android:id="@+id/button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="28dp"
            android:onClick="launchSecondActivity"
            android:text="@string/ok1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/length_a" />

        <EditText
            android:id="@+id/date_a"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/dateHint"
            android:inputType="date"
            app:layout_constraintBaseline_toBaselineOf="@+id/date_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.938"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/interest_a"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number|numberDecimal"
            app:layout_constraintBaseline_toBaselineOf="@+id/interest_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.938"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/length_a"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number|numberDecimal"
            app:layout_constraintBaseline_toBaselineOf="@+id/length_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.938"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/loan_a"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number|numberDecimal"
            app:layout_constraintBaseline_toBaselineOf="@+id/loan_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.938"
            app:layout_constraintStart_toStartOf="parent" />

        <CheckBox
            android:id="@+id/check_box"
            android:layout_width="247dp"
            android:layout_height="36dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="4dp"
            android:text="@string/cbox"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
